--- a/build.gradle
+++ b/build.gradle
@@ -28,9 +28,11 @@ dependencies {
 	/*runtimeOnly 'com.h2database:h2'*/
 	implementation 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
 
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
